# qnlp

./: .gitignore  README.md  pyproject.toml  qnlp_tutorial.ipynb
data/: toy_sentiment.csv
poster/: README.md  beamerthemegemini.sty  main.tex
poster_assets/: poster_outline.md
src/qnlp_tutorial/: __init__.py  data.py  demo.py  grammar.py  quantum.py  visualize.py
tests/: test_pipeline.py
writeup/: Makefile  README.md  main.tex  references.bib
